Fixed breadcrumb and footer alignment
git-svn-id: file:///labs/cse09/svn/cse09@223 5b58ccf8-e53a-4712-86e9-8fde12058ca0

--- a/src/themes/blue-icon/css/style.css
+++ b/src/themes/blue-icon/css/style.css
@@ -343,7 +343,9 @@ aside
 
 #experiment-article-breadcrumb
 {
- margin-left: 30px;
+  /*margin-left: 30px;*/
+  margin: 0 auto;
+  width: 1024px;  
 }
 
 #experiment-article-breadcrumb a:link, #experiment-article-breadcrumb a:visited
@@ -351,4 +353,7 @@ aside
  color: #fefefe;
 }
 
-
+#lab-footer
+{
+    text-align : center;
+}
